<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_bar_title">Pixiv for Muzei 3 Settings</string>
    <string name="action_sign_in">Login</string>

    <string name="app_name">Pixiv for Muzei 3</string>

    <string name="artwork">Artwork</string>

    <string name="attr_daily">Daily Ranking #</string>
    <string name="attr_female">Popular with females #</string>
    <string name="attr_male">Popular with males #</string>
    <string name="attr_monthly">Monthly Ranking #</string>
    <string name="attr_original">Original #</string>
    <string name="attr_rookie">Rookie #</string>
    <string name="attr_weekly">Weekly Ranking #</string>

    <string name="button_clearCache">Immediately clear image cache</string>

    <string name="command_addToBookmark">Add to bookmarks</string>
    <string name="command_addToPrivateBookmark">Bookmark privately</string>
    <string name="command_delete_artwork">Delete this artwork</string>
    <string name="command_shareImage">Share image</string>
    <string name="command_viewArtworkDetails">Show details</string>

    <string name="dialogTitle_muzeiNotActiveSource">Pixiv for Muzei 3 is not the active source</string>
    <string name="dialogTitle_muzeiNotInstalled">Muzei is not installed</string>

    <string name="dialog_installMuzei">Would you like to install Muzei?</string>
    <string name="dialog_no">No</string>
    <string name="dialog_selectSource">Please open Muzei to the Sources tab, and select \"Pixiv for Muzei 3\"</string>
    <string name="dialog_yes">Yes</string>

    <string name="fab_delete_selected_artwork">Delete selected artwork</string>

    <string name="login_pixiv_account_hint">Type pixiv username</string>
    <string name="login_pixiv_password_hint">Pixiv account password</string>

    <string name="prefCat_about">About</string>
    <string name="prefCat_advFiltering">Advanced filtering</string>
    <string name="prefCat_authSettings">Pixiv Login</string>
    <string name="prefCat_fileOptions">File Options</string>
    <string name="prefCat_networkingOptions">Networking options</string>
    <string name="prefCat_pullFeedSettings">Picture feed settings</string>
    <string name="prefCat_postProcess">Postprocessing Options</string>

    <string name="prefSummary_LoggedIn">Logged in as </string>
    <string name="prefSummary_currentlyLoggedInAs">"Currently logged in as "</string>
    <string name="prefSummary_noFileSizeLimit">No limit</string>
    <string name="prefSummary_notLoggedIn">Not logged in</string>
    <string name="prefSummary_storeInExtStorage">Pictures saved here will not be automatically cleared</string>
    <string name="prefSummary_stuckApp">If the app is not working, press here</string>
    <string name="prefSummary_autoCrop">Crops blank spaces around artworks. Increased battery drain when downloading.</string>

    <string name="prefTitle_MaximumFileSize">Maximum artwork size</string>
    <string name="prefTitle_artistId">Artist ID</string>
    <string name="prefTitle_aspectRatio">Artwork aspect ratio</string>
    <string name="prefTitle_authFilterSelect">Feed NSFW filter level</string>
    <string name="prefTitle_autoClearMode">Automatically clear cache at 1AM daily</string>
    <string name="prefTitle_keyContributor">Key contributor</string>
    <string name="prefTitle_loginButton">Login</string>
    <string name="prefTitle_logoutButton">Manage login</string>
    <string name="prefTitle_mainDeveloper">Main developer</string>
    <string name="prefTitle_minimumViews">Artwork minimum views</string>
    <string name="prefTitle_numToDownload">Number of artwork to download at a time</string>
    <string name="prefTitle_openNsfwWiki">Explanation of NSFW levels</string>
    <string name="prefTitle_rankingFilterSelect">Ranking NSFW filter level</string>
    <string name="prefTitle_sendFeedback">Send Feedback or Suggestions</string>
    <string name="prefTitle_showManga">Show manga</string>
    <string name="prefTitle_storeInExtStorage">Save pictures into external storage</string>
    <string name="prefTitle_storingInWhichExtStorage">Saving pictures to</string>
    <string name="prefTitle_tagSearch">Image tag</string>
    <string name="prefTitle_minimumWidth">Minimum picture width</string>
    <string name="prefTitle_minimumHeight">Minimum picture height</string>
    <string name="prefTitle_autoCrop">Auto crop</string>

    <string name="pref_aspectRatioDefault_entryValues">0</string>
    <string name="pref_authFailActionDropDown">Authentication failure action</string>
    <string name="prefTitle_enableNetworkBypass">Enable network filter bypass</string>
    <string name="prefTitle_usePixivCat">Use pixiv.cat reverse proxy for image downloads</string>
    <string name="pref_updateMode">Update mode</string>
    <string name="pref_updateMode_default">daily_rank</string>

    <string name="snackbar_deletedArtworks">artworks deleted</string>
    <string name="snackbar_selectArtworkFirst">Select at least one artwork to delete</string>

    <string name="tab_heading_adv_options">Advanced settings</string>
    <string name="tab_heading_artwork_delete">Delete Artwork</string>
    <string name="tab_heading_credits">Credits</string>
    <string name="tab_heading_main">Main</string>
    <string name="tab_heading_roadmap">Roadmap</string>

    <string name="tile_delete_artwork" translatable="false">Delete artwork</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="toast_addingToBookmarks">Pixiv for Muzei 3: Adding to bookmark</string>
    <string name="toast_authFailed">Authentication failed. Check your username or password</string>
    <string name="toast_authFailedDown">Pixiv for Muzei 3: Login failed, temporarily downloading daily ranking</string>
    <string name="toast_authFailedRetry">Pixiv for Muzei 3: Login failed, will try again</string>
    <string name="toast_authFailedSwitch">Pixiv for Muzei 3: Login failed, switching to daily ranking</string>
    <string name="toast_clearingCache">Clearing image cache</string>
    <string name="toast_loginFirst">Please login first</string>
    <string name="toast_newArtist">New Artist, clearing image cache</string>
    <string name="toast_newFilterMode">New filtering mode, clearing image cache</string>
    <string name="toast_newFilterSelect">New filter selection, clearing image cache</string>
    <string name="toast_newTag">New search tag, clearing image cache</string>
    <string name="toast_newUpdateMode">New update mode, clearing image cache</string>
    <string name="toast_bookmark_success">Added to bookmarks: %s</string>
    <string name="toast_bookmark_private_success">Added to private bookmarks: %s</string>
    <string name="toast_bookmark_failure">Failed to add to bookmarks: %s</string>

    <string name="preferenceScreen">preferenceScreen</string>
    <string name="login_pixiv_refresh_hint">Refresh Token</string>
    <string name="action_sign_in_refresh">Login using refresh token</string>
    <string name="dialog_logoutConfirm">Are you sure you want to logout?</string>
    <string name="prefTitle_nightModePreference">Night mode preference</string>
    <string name="prefTitle_mobileDataSaver">Mobile data saver</string>
    <string name="prefSummary_mobileDataSaver">Stops new artworks from being downloaded</string>
    <string name="prefCat_appSettings">App settings</string>
    <string name="prefSummary_enableNetworkBypass">Disable if you are having problems on VPN</string>
    <string name="prefSummary_usePixivCat">May speed up image downloads in some areas</string>
    <string name="prefTitle_tagLanguage">Tag language</string>
    <string name="no_browser_available">No app available to open this link</string>
</resources>
