<?xml version="1.0" encoding="utf-8"?><!--
  ~     This file is part of PixivforMuzei3.
  ~
  ~     PixivforMuzei3 is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program  is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:key="pref_autoClearMode"
        android:persistent="true"
        android:title="@string/prefTitle_autoClearMode" />
    <SwitchPreference
        android:key="pref_storeInExtStorage"
        android:persistent="true"
        android:summary="@string/prefSummary_storeInExtStorage"
        android:title="@string/prefTitle_storeInExtStorage" />
    <SeekBarPreference
        android:defaultValue="3"
        android:key="prefSlider_numToDownload"
        android:max="10"
        android:persistent="true"
        android:title="@string/prefTitle_numToDownload"
        app:min="1" />
</PreferenceScreen>