<?xml version="1.0" encoding="utf-8"?><!--
  ~     This file is part of PixivforMuzei3.
  ~
  ~     PixivforMuzei3 is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program  is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Preference
        android:summary="@string/prefTitle_mainDeveloper"
        android:title="yellowbluesky">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/yellowbluesky/PixivforMuzei3" />
    </Preference>
    <Preference
        android:summary="@string/prefTitle_keyContributor"
        android:title="alvince">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/alvince" />
    </Preference>
    <Preference
        android:summary="@string/prefTitle_keyContributor"
        android:title="Perol_Notsfsssf">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/Notsfsssf" />
    </Preference>
    <Preference
        android:summary="Localisations and F-Droid submitter"
        android:title="linsui">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/linsui" />
    </Preference>
    <Preference
        android:summary="Localisations"
        android:title="SettingDust">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/SettingDust" />
    </Preference>
    <Preference
        android:summary="Feature addition"
        android:title="FluffyDiscord">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/FluffyDiscord" />
    </Preference>

    <Preference android:title="@string/prefTitle_openNsfwWiki">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/yellowbluesky/PixivforMuzei3/wiki/Explanation-of-NSFW-filtering-levels" />
    </Preference>

    <Preference
        android:key="pref_sendFeedback"
        android:title="@string/prefTitle_sendFeedback" />
</PreferenceScreen>
